--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Leonardo Bezerra - Academic CV
-description: Assistant Professor @ UFRN, Natal, RN, Brazil
+description: Lecturer @ University of Stirling, Stirling, UK
 image:
   path: img/us.jpg
   height: 1200
