--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 title: Leonardo Bezerra - Academic CV
-description: Lecturer @ University of Stirling, Stirling, UK
+description: Lecturer in AI/Data Science @ University of Stirling, Stirling, UK
 image:
   path: img/us.jpg
   height: 1200
