--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,2 @@
-title: Leonardo Bezerra - Academic CV
+title: Leonardo C. T. Bezerra - Academic CV
 description: Lecturer in AI/Data Science @ University of Stirling, Stirling, UK
-image:
-  path: img/us.jpg
-  height: 1200
-  width: 628
