--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,2 @@
 - title: Leonardo C. T. Bezerra - Academic page
-- description: Lecturer in AI/Data Science @ University of Stirling, UK
+- description: Lecturer in Sociotechnical & Responsible AI / Data Science
