[docs] _config.yml: updated all

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,2 @@
-- title: Leonardo C. T. Bezerra - Academic page
+- title: Leonardo C. T. Bezerra - Academic CV
 - description: Lecturer in Sociotechnical & Responsible AI / Data Science
