--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,2 @@
-- title: Leonardo C. T. Bezerra - Academic webpage
-- description: Lecturer in Sociotechnical & Responsible AI / Data Science
+title: Leonardo C. T. Bezerra - Academic webpage
+description: Lecturer in Sociotechnical & Responsible AI / Data Science
