[docs] _config.yml: image

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,2 +1,3 @@
 title: Leonardo C. T. Bezerra - Academic webpage
 description: Lecturer in Sociotechnical & Responsible AI / Data Science
+image: img/map.png
